--- a/package.json
+++ b/package.json
@@ -9,13 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-aspect-ratio": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
+    "@svgr/webpack": "^8.1.0",
     "class-variance-authority": "^0.7.0",
+    "cloudinary-build-url": "^0.2.4",
     "clsx": "^2.1.0",
     "framer-motion": "^11.0.12",
     "lucide-react": "^0.356.0",
     "next": "14.1.3",
     "react": "^18",
+    "react-countup": "^6.5.0",
     "react-dom": "^18",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7"
